cmake_minimum_required(VERSION 3.13)

project(
  divvy
  VERSION 1.0
  LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(DIVVY_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(DIVVY_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(DIVVY_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(HELLOWORLD_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/HelloWorld)

include_directories(${DIVVY_INSTALL_INCLUDE_DIR})
include_directories(${HELLOWORLD_HEADERS_DIR})

add_subdirectory(src)
